# servant-quickcheck

./: .gitignore  servant-quickcheck.cabal
example/: Main.hs
src/Servant/: QuickCheck.hs
src/Servant/QuickCheck/Internal/: HasGenRequest.hs  QuickCheck.hs
test/Servant/QuickCheck/: InternalSpec.hs
