name:               servant-quickcheck
version:            0.0.9.1
synopsis:           QuickCheck entire APIs
description:
  This packages provides QuickCheck properties that are tested across an entire
  API.

license:            BSD3
license-file:       LICENSE
author:             Julian K. Arni
maintainer:         jkarni@gmail.com
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: CHANGELOG.yaml
tested-with:        GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || == 8.8.3

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-quickcheck

flag long-tests
  description: Run more QuickCheck tests
  default:     False

library
  exposed-modules:
    Servant.QuickCheck
    Servant.QuickCheck.Internal
    Servant.QuickCheck.Internal.Equality
    Servant.QuickCheck.Internal.ErrorTypes
    Servant.QuickCheck.Internal.HasGenRequest
    Servant.QuickCheck.Internal.Predicates
    Servant.QuickCheck.Internal.QuickCheck

  build-depends:
      aeson
    , base
    , base-compat-batteries
    , bytestring
    , case-insensitive
    , clock
    , data-default-class
    , hspec
    , http-client >= 0.6.4 && < 0.7
    , http-media
    , http-types
    , mtl
    , pretty
    , process
    , QuickCheck
    , servant
    , servant-client
    , servant-server
    , split
    , string-conversions
    , temporary
    , text
    , time
    , warp

  if !impl(ghc >=8.0)
    build-depends: semigroups

  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeOperators

  default-language:   Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -threaded
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      Servant.QuickCheck.InternalSpec
  build-tool-depends: hspec-discover:hspec-discover -any
  build-depends:
      aeson
    , base
    , base-compat-batteries
    , blaze-html
    , bytestring
    , hspec
    , hspec-core
    , http-client
    , QuickCheck
    , quickcheck-io
    , servant
    , servant-blaze
    , servant-client
    , servant-quickcheck
    , servant-server
    , transformers
    , warp

  default-extensions:
    NoImplicitPrelude
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    OverloadedStrings
    ScopedTypeVariables
    TypeOperators

  if flag(long-tests)
    cpp-options: -DLONG_TESTS

test-suite example
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   example
  ghc-options:      -Wall -Wunused-packages -threaded -with-rtsopts=-N
  build-depends:
      base
    , containers
    , async
    , hspec
    , http-client
    -- , pqc -- NOTE use my fork
    , QuickCheck
    , servant-quickcheck
    , servant-server
    , servant-client
    , string-conversions
    , text
    , wai-logger
    , warp

  default-language: Haskell2010
